Moved sources in src/ and headers into include/
updated CMakeLists.txt to reflect the changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.6)
 project(linkedlistcpp)
 
-add_executable(linkedlistcpp main.cpp linkedList.cpp)
+set(SRC_FILES src/main.cpp src/linkedList.cpp)
+set(HEADER_FILES include/linkedList.hpp)
+
+include_directories(include/)
+add_executable(linkedlistcpp ${SRC_FILES} ${HEADER_FILES})
 
 install(TARGETS linkedlistcpp RUNTIME DESTINATION bin)
